--- a/vignettes/dynamic_effects.Rmd
+++ b/vignettes/dynamic_effects.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Dynamic Effects in Longitudinal AME Models"
-author: "Peter Hoff, Yanjun He, Shahryar Minhas"
+author: "Cassy Dorff, Tosin Salau, Shahryar Minhas"
 date: "`r Sys.Date()`"
 output: rmarkdown::html_vignette
 vignette: >
@@ -29,6 +29,7 @@ The standard AME model decomposes network structure as:
 $$y_{ij} = \beta'x_{ij} + a_i + b_j + u_i'v_j + \epsilon_{ij}$$
 
 where:
+
 - $\beta'x_{ij}$: Fixed effects of covariates
 - $a_i$: Sender (row) effect for node $i$
 - $b_j$: Receiver (column) effect for node $j$
@@ -47,11 +48,13 @@ $$U_{i,k,t} = \rho_{uv} U_{i,k,t-1} + \epsilon_{i,k,t}$$
 $$V_{j,k,t} = \rho_{uv} V_{j,k,t-1} + \eta_{j,k,t}$$
 
 where:
+
 - $\epsilon_{i,k,t}, \eta_{j,k,t} \sim N(0, \sigma_{uv}^2)$
 - $\rho_{uv} \in (0,1)$ controls temporal persistence
 - $i,j$ index actors, $k$ indexes latent dimensions, $t$ indexes time
 
 This specification allows actors' positions in latent social space to drift over time, capturing:
+
 - Evolving community structure
 - Time-varying homophily patterns
 - Dynamic clustering and transitivity
@@ -64,10 +67,12 @@ $$a_{i,t} = \rho_{ab} a_{i,t-1} + \epsilon_{i,t}$$
 $$b_{j,t} = \rho_{ab} b_{j,t-1} + \eta_{j,t}$$
 
 where:
+
 - $\epsilon_{i,t}, \eta_{j,t} \sim N(0, \sigma_{ab}^2)$
 - $\rho_{ab} \in (0,1)$ controls temporal smoothness
 
 This captures:
+
 - Time-varying activity levels (outdegree heterogeneity)
 - Changing popularity (indegree heterogeneity)
 - Life-cycle effects in social networks
@@ -79,10 +84,12 @@ This captures:
 The package uses the following default priors:
 
 **AR(1) coefficients:**
+
 - $\rho_{uv} \sim \text{TruncNormal}(0.9, 0.1, 0, 1)$
 - $\rho_{ab} \sim \text{TruncNormal}(0.8, 0.15, 0, 1)$
 
 **Innovation variances:**
+
 - $\sigma_{uv}^2 \sim \text{InverseGamma}(2, 1)$
 - $\sigma_{ab}^2 \sim \text{InverseGamma}(2, 1)$
 
@@ -105,7 +112,7 @@ The dynamic effects are implemented in C++ via `Rcpp` and `RcppArmadillo`:
 
 1. **Block sampling**: Updates are performed in blocks to improve mixing
 2. **Sparse operations**: Exploits temporal structure for efficiency
-3. **Memory optimization**: ~70% reduction compared to R implementation
+3. **Memory optimization**:  about a 50% reduction compared to R implementation
 
 ### Algorithmic Details
 
@@ -152,7 +159,7 @@ fit_dynamic <- lame(
 
 ### Visualization
 
-The package provides unified plotting functions that automatically detect dynamic effects:
+Plotting functions can illustrate temporal dynamics:
 
 ```r
 # Plot latent positions at specific time
@@ -197,6 +204,7 @@ model_comparison <- data.frame(
 ## Convergence Diagnostics
 
 Dynamic models typically require:
+
 - Longer burn-in (≥ 1000 iterations)
 - More samples (≥ 20000 post burn-in)
 - Careful monitoring of $\rho$ and $\sigma^2$ parameters
@@ -217,21 +225,9 @@ plot(fit_dynamic$sigma_ab_samples, type = "l", main = "sigma_ab trace")
 
 ## References
 
-### Key Papers
-
 1. **Sewell, D. K., & Chen, Y. (2015)**. Latent space models for dynamic networks. *Journal of the American Statistical Association*, 110(512), 1646-1657.
 
 2. **Durante, D., & Dunson, D. B. (2014)**. Nonparametric Bayes dynamic modeling of relational data. *Biometrika*, 101(4), 883-898.
-
-3. **Hoff, P. D. (2011)**. Hierarchical multilinear models for multiway data. *Computational Statistics & Data Analysis*, 55(1), 530-543.
-
-4. **Krivitsky, P. N., & Handcock, M. S. (2014)**. A separable model for dynamic networks. *Journal of the Royal Statistical Society: Series B*, 76(1), 29-46.
-
-### Additional Reading
-
-- Ward, M. D., Siverson, R. M., & Cao, X. (2007). Disputes, democracies, and dependencies: A reexamination of the Kantian peace. *American Journal of Political Science*, 51(3), 583-601.
-
-- Cranmer, S. J., & Desmarais, B. A. (2011). Inferential network analysis with exponential random graph models. *Political Analysis*, 19(1), 66-86.
 
 ## Appendix: Mathematical Details
 
